--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,7 @@ runs:
         #On Github Actions, container default user is root
         #However, the $HOME folder is changed to /github/home
         #TODO: elixir dependencies migration
+        apt-get install sudo -y
         sudo rm -f $HOME/.ssh/config
         sudo cp -a /root/. $HOME/
       shell: bash
