--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ runs:
         #However, the $HOME folder is changed to /github/home
         #TODO: elixir dependencies migration
         apt-get update -y
-        apt-get install sudo -y
+        apt-get install sudo jq -y
         sudo rm -f $HOME/.ssh/config
         sudo cp -a /root/. $HOME/
       shell: bash
