--- a/action.yml
+++ b/action.yml
@@ -11,8 +11,8 @@ runs:
         #On Github Actions, container default user is root
         #However, the $HOME folder is changed to /github/home
         #TODO: elixir dependencies migration
-        apt-get update -y
-        apt-get install sudo jq -y
+        # apt-get update -y
+        # apt-get install sudo jq -y
         sudo rm -f $HOME/.ssh/config
         sudo cp -a /root/. $HOME/
       shell: bash
